fix: add calc scrollBarWidth logic into sidesheet open

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -112,11 +112,6 @@
 
 .light-scrollbar {
 
-    // light scrollbar
-    &::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
-    }
 
     &::-webkit-scrollbar-track {
         background: rgba(0, 0, 0, 0);
